Fix some stupid layout issues where views were not taking the full height of their parent containers

--- a/src/views/common/base.css
+++ b/src/views/common/base.css
@@ -1,8 +1,20 @@
-#app {
-  min-height:100%;
+
+.rootContainer {
+  position: absolute;
+  width: 100%;
   height: 100%;
-  margin: 8px;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  background-color: #1E2127;
 }
+
+body {
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+}
+
 
 /*************************************************
 * Everything below was lifted from spectre.css  *
@@ -21,12 +33,7 @@ html {
   -ms-text-size-adjust: 100%;
   /* 2 */
 }
-/**
- * Remove the margin in all browsers (opinionated).
- */
-body {
-  margin: 0;
-}
+
 /* HTML5 display definitions
    ========================================================================== */
 /**
@@ -378,7 +385,7 @@ textarea {
 html {
   box-sizing: border-box;
   font-size: 10px;
-  line-height: 1.42857143;
+  line-height: 1.12857143;
   -webkit-tap-highlight-color: transparent;
 }
 body {
