--- a/src/views/components/ListView.css
+++ b/src/views/components/ListView.css
@@ -3,20 +3,18 @@
   font-weight: 500px;
   font-size: 24px;
   color: #FFFFFF;
-  padding-left: 18px;
-  padding-top: 8px;
   padding-bottom: 0px;
   margin: 0px;
 }
 
 .listViewContainer {
-  margin: 2px;
-  background-color: #1E2127;
-  height: 100%;
+  flex: 1;
+  margin: 0;
+  padding: 20px;
+  padding-top: 20px;
+  padding-bottom: 10px;
 }
 
 .list {
-  overflow: hidden;
-  height: 224px;
-  margin-top: 0px;
+  margin: 0;
 }
