--- a/src/views/pages/PageGrid/PageGridStyle.css
+++ b/src/views/pages/PageGrid/PageGridStyle.css
@@ -5,12 +5,13 @@
   flex-wrap: wrap;
   flex-direction: row;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: stretch;
   align-content: flex-start;
 }
 
 .gridItem {
-  flex-grow: 0;
+  display: flex;
+  flex-grow: 1;
   flex-shrink: 0;
   width: 33.33333%;
 }
